# sfm_duplicate_structure_correction

./: .gitignore  README.md
SLICO-Superpixels/: CMakeLists.txt  USAGE_SLIC.txt
SLICO-Superpixels/src/: SLIC.cpp  main.cpp
matlab/: main.m  main_load_data.m  main_process_merging_result.m  main_run.m  main_run_merging2.m  main_run_splitting2.m  main_settings.m
matlab/code/: axis_angle_to_matrix.m  compute_RTS_3_points_3d.m  compute_RTS_3_points_3d_same_scale.m  compute_RTS_N_points_3d.m  compute_RTS_N_points_3d_same_scale.m  compute_baseline_angle_between_cameras.m  compute_baseline_angle_between_cameras2.m  compute_baseline_angles_between_camera_pairs.m  compute_baseline_angles_between_camera_pairs2.m  compute_camera_observation_segments2.m  compute_camera_pair_segments2.m  compute_camera_spanning_tree.m  compute_conflicting_indices2.m  compute_conflicting_indices2_merging.m  compute_connected_camera_matrix.m  compute_connected_camera_matrix2.m  compute_distance_threshold_3d.m  compute_edge_conflict2.m  compute_edge_conflict2_merging.m  compute_group_sizes.m  compute_image_segmentations.m  compute_similarity_inliers.m  compute_spanning_tree_conflict2.m  compute_split_group_assignments.m  create_camera_observations.m  create_point_observations.m  create_thumbnails.m  create_visibility_matrix.m  edge_label_baseline_angle_class.m  edge_label_conflict_class.m  enforce_n_view_points.m  enforce_n_view_points_no_inliers.m  find_disconnected_inlier_point_indices.m  find_disconnected_inliers.m  find_edge_index.m  find_nearby_indices.cpp  find_split_cameras.m  (+20 more)
(+1 files in other folders)
